// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fetch historical balances 2`] = `
[
  {
    "BTC": "0.035979259",
    "_id": "1504224000000",
    "_rev": "1-7f85683af7963452c91210bb1cf33b77",
    "timestamp": 1504224000000,
  },
  {
    "BTC": "0.035979259",
    "_id": "1504310400000",
    "_rev": "1-40e36039c599b9bfa1151b38b96f1409",
    "timestamp": 1504310400000,
  },
  {
    "BTC": "0.035979259",
    "_id": "1504396800000",
    "_rev": "1-99374168a5ad113e7f555b9ab28d513f",
    "timestamp": 1504396800000,
  },
  {
    "BTC": "0.035979259",
    "_id": "1504483200000",
    "_rev": "1-e3ece596240565d55891796b2799f411",
    "timestamp": 1504483200000,
  },
  {
    "BTC": "0.035979259",
    "_id": "1504569600000",
    "_rev": "1-ecc5c8f28023111e6f5eb213c4acdcae",
    "timestamp": 1504569600000,
  },
  {
    "BTC": "0.035979259",
    "_id": "1504656000000",
    "_rev": "1-0776fc3b5428de18a80c3b605f96a224",
    "timestamp": 1504656000000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1504742400000",
    "_rev": "2-8d783887041ea8b05a7c79963f9fe34f",
    "timestamp": 1504742400000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1504828800000",
    "_rev": "2-6cccea5fb3b1a6e49598707fafbd3e08",
    "timestamp": 1504828800000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1504915200000",
    "_rev": "2-aed8c2142e6f39d9ba7129eddee9873f",
    "timestamp": 1504915200000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1505001600000",
    "_rev": "2-68a206ce9917179b572745df206ac4d1",
    "timestamp": 1505001600000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1505088000000",
    "_rev": "2-3cabeaf6b04825d26e55a481fb606653",
    "timestamp": 1505088000000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1505174400000",
    "_rev": "2-0fa25f6f9c0f0673218d52680b704a49",
    "timestamp": 1505174400000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1505260800000",
    "_rev": "2-d09b3f783986f6e05373d090a1946967",
    "timestamp": 1505260800000,
  },
  {
    "BTC": "0.072958518",
    "_id": "1505347200000",
    "_rev": "2-9eef2e3cf8cee7507e688288640da679",
    "timestamp": 1505347200000,
  },
]
`;

exports[`should fetch latest balances with price data 1`] = `
[
  {
    "_id": "1505347200000_BTC",
    "balance": "0.072958518",
    "balanceN": 0.072958518,
    "price": {
      "close": 3250.4,
      "high": 3923,
      "low": 3230.05,
      "open": 3855.61,
      "time": 1505347200,
      "value": 3250.4,
      "volume": 36363.92501211,
    },
    "symbol": "BTC",
    "value": 237.1443669072,
  },
]
`;

exports[`should fetch latest balances without price data 1`] = `
[
  {
    "_id": "1505347200000_BTC",
    "balance": "0.072958518",
    "balanceN": 0.072958518,
    "price": undefined,
    "symbol": "BTC",
    "value": undefined,
  },
]
`;

exports[`should have balances computed 1`] = `
[
  {
    "_id": "2675435331_3604660326_0",
    "_rev": "3-13758d786e0dc016bc7826a360e22a00",
    "assetId": "BTC",
    "balance": "0.072958518",
    "balanceN": 0.072958518,
    "change": "0.036979259",
    "changeN": 0.036979259,
    "importId": "2675435331",
    "importIndex": 0,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504789876000,
    "wallet": "Spot",
  },
  {
    "_id": "2675435331_1607323056_0",
    "_rev": "2-f3de38a09cb63f42d9100f393a665135",
    "assetId": "BTC",
    "balance": "0.035979259",
    "balanceN": 0.035979259,
    "change": "0.035979259",
    "changeN": 0.035979259,
    "importId": "2675435331",
    "importIndex": 1,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504267876000,
    "wallet": "Spot",
  },
]
`;

exports[`should not have balances computed 1`] = `
[
  {
    "_id": "2675435331_3604660326_0",
    "_rev": "1-9b6306b15f9239d586eaa7c1c0e3772f",
    "assetId": "BTC",
    "change": "0.036979259",
    "changeN": 0.036979259,
    "importId": "2675435331",
    "importIndex": 0,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504789876000,
    "wallet": "Spot",
  },
  {
    "_id": "2675435331_1607323056_0",
    "_rev": "1-4bdd9f07b73b5c40abbebde70c0df20d",
    "assetId": "BTC",
    "change": "0.035979259",
    "changeN": 0.035979259,
    "importId": "2675435331",
    "importIndex": 1,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504267876000,
    "wallet": "Spot",
  },
]
`;
